--- a/equipment/index.html
+++ b/equipment/index.html
@@ -314,53 +314,81 @@
 <p class="NoIndent">
 	它由閃耀精鋼打造而成，散發著金黃色的光芒，且被灌注了象徵威權的神秘力量。當你帶著這柄斧頭時，你將成為能夠激勵你率領部下的明燈。無論你的領導能力如何，所有你所雇傭的僱工都將獲得+1忠誠度。</p></div>
 
-<div class="Move"><p class="MagicItem">Barb of the Black Gate	<span class="Tags">0 重量</span></p>
-<p class="NoIndent">A nail or spike, twisted and forever cold, said to have been pried from the Gates of Death. When hammered into a corpse, it disappears and ensures that corpse will never be risen again—no magic short of that of Death himself can reignite the flame of life (natural or otherwise) in the body.</p></div>
+<div class="Move"><p class="MagicItem">黑門喪釘 (Barb of the Black Gate)	<span class="Tags">0 重量</span></p>
+<p class="NoIndent">
+	一根扭曲、永遠冰冷的釘子或尖刺。據說它是從死亡國度的大門上被撬下來的。當它被敲進屍體時，它將會消失無蹤，並確保那具屍體永遠無法再被復活──除了死神本人之外，沒有任何魔法能夠再點燃那具屍體的生命之火（無論自然與否）。</p></div>
 
 <div class="Move"><p class="MagicItem">次元袋 (Bag of Holding)	<span class="Tags">0 重量</span></p>
-<p class="NoIndent">A bag of holding is larger on the inside than the outside, it can contain an infinite number of items, and its weight never increases. When you try to retrieve an item from a bag of holding, roll+WIS. ✴On a 10+, it’s right there. ✴On a 7-9, choose one:</p>
-<ul><li>You get the exact item, but it takes a while</li>
-<li>You get a similar item of the GM’s choice, but it only takes a moment</li></ul>
-<p class="NoIndent">No matter how many items it contains, a bag of holding is always 0 weight.</p></div>
+<p class="NoIndent">
+	次元袋的內部空間比外表看起來要大上許多，它可以容納無限數量的物品，且它的重量永遠不會因此改變。當你嘗試從次元袋中拿出一個物品時，擲+睿知：<br/>
+	✴擲出10+時，它剛好就在這裡。<br/>
+	✴擲出7-9時，選擇一項：</p>
+<ul>
+	<li>你確實找到了該物品，但花了好一段時間</li>
+	<li>你找到了一個由GM選擇的相似物品，但只花了片刻</li></ul>
+<p class="NoIndent">
+	不管裝了多少的物品，次元袋永遠為 <tag>0 重量</tag>。</p></div>
 
 <div class="Move"><p class="MagicItem">燃燒車輪 (The Burning Wheel)	<span class="Tags">2 重量</span></p>
-<p class="NoIndent">An ancient wooden wheel, as might appear on a war-wagon, banded with steel. On a glance, it appears to be nothing special—many spokes are shattered and the thing seems mundane. Under the scrutiny of magic or the eyes of an expert, its true nature is revealed: the Burning Wheel is a gift from the God of Fire and burns with his authority.</p>
-<p>When you hold The Burning Wheel and speak a god’s name, roll+CON. ✴On a 7+, the god you name takes notice and grants you an audience. An audience with a god is not without a price: on a 10+, you choose one of your stats and reduce it to the next lowest modifier (for example, a 14 is +1, so it would be reduced to 12, a +0). ✴On a 7–9, the GM chooses which stat to reduce.</p>
-<p>Once used, the Burning Wheel ignites and burns with brilliant light. It does not confer any protection from those flames, nor does it provide any bonus to swimming.</p></div>
-<div class="Move"><p class="MagicItem">Captain Bligh’s Cornucopia	<span class="Tags">1 重量</span></p>
-<p class="NoIndent">A brass naval horn, curled and ornate, carved with symbols of the gods of Plenty. When blown, in addition to sound, the horn spills forth food. Enough to feed a meal to everyone who hears its sound.</p></div>
-<div class="Move"><p class="MagicItem">The Carcosan Spire	<span class="Tags">及遠, 投擲, 3 重量</span></p>
-<p class="NoIndent">None know from whence this spear of twisted white coral comes. Those who bear it too long find their minds full of alien dreams and begin to hear the strange thoughts of the Others. None are impervious. Used against any “natural” target (men, goblins, owlbears and the like) the Spire acts as a mere mortal spear. Its true purpose is to do harm to those things whose strange natures protect them against mundane weapons. Used thus, the Spire can wound foes otherwise invulnerable to harm. The wielder will recognize these twisted foes on sight—the Spire knows its own.</p></div>
-<div class="Move"><p class="MagicItem">Cloak of Silent Stars	<span class="Tags">1 重量</span></p>
+<p class="NoIndent">
+	一個古老的木質車輪，輪箍外圈鑲嵌著鋼鐵，看起來彷彿曾用於戰車上。乍看之下它並沒有什麼特別的──輪內的許多幅條已經破碎，整體看起來平凡無奇。但在魔法的審查或專家的檢視之下，它的本質將被揭露：燃燒車輪是來自火焰之神的贈禮，並能憑著祂的神威而熊熊燃燒。</p>
+<p>當你持握燃燒車輪，並說出火焰之神的名諱時，擲+體質：<br/>
+	✴擲出7+時，你呼喚的神祇將注意到你，並允許你謁見。然而，謁見神祇並不是沒有代價的：<br/>
+	✴擲出10+時，你選擇你的其中一個屬性，並將它減少至會使調整值降低一級的數值（舉例來說，屬性值 14的相應調整值為 +1，因此它將被降低至 12，使調整值變為 +0）。<br/>
+	✴擲出7-9時，由GM選擇你要減少的屬性。</p>
+<p>
+	一旦被使用，燃燒車輪將被點燃並燃燒綻放出燦爛火光。它並不能保護你不受到這些火焰的傷害，也不會提供任何游泳的加值。</p></div>
+
+<div class="Move"><p class="MagicItem">布雷赫船長的豐穰之角 (Captain Bligh’s Cornucopia)	<span class="Tags">1 重量</span></p>
+<p class="NoIndent">
+	一個黃銅打造的船號角，蜷曲而華麗，刻有豐饒諸神的符號。當被吹響時，除了聲音之外，這個號角還會灑落出各種各樣的食物，其分量足以餵飽每個聽到號角聲音的人。</p></div>
+
+<div class="Move"><p class="MagicItem">卡科薩尖塔 (The Carcosan Spire)	<span class="Tags">及遠, 投擲, 3 重量</span></p>
+<p class="NoIndent">
+	沒有人知道這把由扭曲變形的純白珊瑚製成的長矛是從何而來。那些長時間攜帶這把長矛的人們將發現自己心靈被異星之夢佔據，並會開始聽到來自他處的詭譎思想。沒有人能夠倖免於此。當被用來對付那些「自然」的目標時（像是人類、哥布林、梟熊等等），這把長矛的效果就與普通長矛一模一樣。它真正的目的是用來傷害那些憑藉怪異本質保護自己不受尋常武器傷害的事物。一旦被這樣使用，卡科薩尖塔將能傷害那些原本不會受到任何傷害的敵人。卡科薩尖塔的持用者能夠一眼就認出視線範圍內的這類敵人──尖塔認得它自己的死敵。</p></div>
+
+<div class="Move"><p class="MagicItem">沉默群星斗篷 (Cloak of Silent Stars)	<span class="Tags">1 重量</span></p>
 <p class="NoIndent">A cape of rich black velvet outside and sparkling with tiny points of light within, this cloak bends fate, time and reality around it to protect the wearer, who may defy danger with whatever stat they like. To do this, the wearer invokes the cloak’s magic and their player describes how the cloak helps “break the rules.” They can deflect a fireball with CHA by convincing it they deserve to live or elude a fall by applying the mighty logic of their INT to prove the fall won’t hurt. The cloak makes it so. It can be used once for each stat before losing its magic.</p></div>
-<div class="Move"><p class="MagicItem">Coin of Remembering	<span class="Tags">0 重量</span></p>
+
+<div class="Move"><p class="MagicItem">記憶硬幣 (Coin of Remembering)	<span class="Tags">0 重量</span></p>
 <p class="NoIndent">What appears, at a glance, to be a simple copper coin is, in truth, an enchanted coin. Its bearer can, at any time, redeem it to know immediately one fact that has been forgotten. The coin vanishes thereafter. It does not have to be a thing forgotten by the bearer, but it cannot be “known.” Interpretation of this stipulation is left to the gods. If the coin is unsuccessful, it will still paint an image in the mind’s eye of someone or something that does remember what was sought.</p></div>
-<div class="Move"><p class="MagicItem">Common Scroll	<span class="Tags">1 使用次數, 0 重量</span></p>
+
+<div class="Move"><p class="MagicItem">尋常卷軸 (Common Scroll)	<span class="Tags">1 使用次數, 0 重量</span></p>
 <p class="NoIndent">A common scroll has a spell inscribed on it. The spell must be castable by you or on your class’s spell list for you to be able to cast it. When you cast a spell from a scroll, the spell takes effect, simple as that.</p></div>
-<div class="Move"><p class="MagicItem">Devilsbane Oil	<span class="Tags">1 使用次數, 0 重量</span></p>
+
+<div class="Move"><p class="MagicItem">剋魔膏油 (Devilsbane Oil)	<span class="Tags">1 使用次數, 0 重量</span></p>
 <p class="NoIndent">A holy oil, created in limited supply by a mute sect of mountain monks whose order protected humanity from the powers of the Demon Pits in ancient epochs. Only a few jars remain. When applied to any weapon and used to strike a denizen of any outer plane, the oil undoes the magic that binds that creature. In some cases, this will return it to its home. In others, it merely undoes any magic controlling it. The oil stays on the weapon for a few hours before it dries and flakes away.</p>
 <p>If applied to the edges of a doorway or drawn in a circle, the oil will repel creatures whose home is any of the outer planes. They cannot pass across it. The oil lasts for one full day before it soaks in or evaporates.</p></div>
-<div class="Move"><p class="MagicItem">Earworm Wax	<span class="Tags">1 use, 0 重量</span></p>
+
+<div class="Move"><p class="MagicItem">耳蟲蠟 (Earworm Wax)	<span class="Tags">1 use, 0 重量</span></p>
 <p class="NoIndent">A yellowish candle. Seems never to burn out and the light it casts is strange and weak. Its wax is always cool, too. Drip the wax into the ear of a target and gain 3 hold. Spend that hold and ask your target a question. They find themselves telling you the whole truth, despite themselves. The consequences, after the fact? Those are up to you to deal with.</p></div>
-<div class="Move"><p class="MagicItem">The Echo	<span class="Tags">0 重量</span></p>
+
+<div class="Move"><p class="MagicItem">回聲之瓶 (The Echo)	<span class="Tags">0 重量</span></p>
 <p class="NoIndent">A seemingly empty bottle. Once unstoppered, the whispers of another plane resound once and fall silent. In the silence, the bearer learns in his soul the coming of one great danger and how he can avoid it. At any point after you use the Echo, you can ignore the results of any single die roll—yours or another player’s—and roll again. Once opened, the Echo is released and gone forever.</p></div>
-<div class="Move"><p class="MagicItem">The Epoch Lens	<span class="Tags">1 重量</span></p>
+
+<div class="Move"><p class="MagicItem">時代紀元之鏡片 (The Epoch Lens)	<span class="Tags">1 重量</span></p>
 <p class="NoIndent">An archmage, old and too frail to leave his tower, crafted this intricate and fragile device of glass and gold to examine the histories and relics he so loved. Looking at an object through the lens reveals visions of who made it and where it came from.</p></div>
-<div class="Move"><p class="MagicItem">Farsight Stone	<span class="Tags">1 重量</span></p>
+
+<div class="Move"><p class="MagicItem">遠視之石 (Farsight Stone)	<span class="Tags">1 重量</span></p>
 <p class="NoIndent">Swirling clouds fill this smoky orb and those in its presence often hear strange whispers. In ancient times, it was part of a network of such stones, used to communicate and surveil across great distances. When you gaze into the stone, name a location and roll+WIS. ✴On a 10+, you see a clear vision of the location and can maintain it as long as you concentrate on the orb. ✴On a 7–9, you still see the vision, but you draw the attention of some other thing (an angel, a demon, or the holder of another Farsight stone) that uses the stone to surveil you, as well.</p></div>
+
 <div class="Move"><p class="MagicItem">The Fiasco Codex	<span class="Tags">0 重量</span></p>
 <p class="NoIndent">A thick tome, said to be penned in the blood of poor fools and robber-barons by some demon prince possessed of dark humor, this tome details tales and stories of those whose ambition overwhelmed their reason. Reading from this tome teaches one the value of clear-headedness but leaves a sense of dread behind. When you read from the Fiasco Codex, Roll+WIS. ✴On a 10+, ask two of the questions below. ✴On a 7–9, ask one.</p>
 <ul><li>What is my greatest opportunity, right now?</li>
 <li>Who can I betray to gain an advantage?</li>
 <li>Who is an ally I should not trust?</li></ul>
 <p class="NoIndent">The codex gives up its answers only once to each reader and takes 2 to 3 hours to read.</p></div>
+
 <div class="Move"><p class="MagicItem">Flask of Breath	<span class="Tags">0 重量</span></p>
 <p class="NoIndent">A simple thing, but useful when you need a breath of fresh air. The flask appears empty but cannot be filled, anything added to it simply spills out. This is because the flask is eternally full of air. If placed underwater, it will bubble forever. If pressed to the mouth, one can breathe normally—smoke is no concern, for example. I’m sure you’ll find all sorts of unusual uses for it.</p></div>
+
 <div class="Move"><p class="MagicItem">Folly Held Aloft, The Wax Wings, A Huge Mistake	<span class="Tags">1 重量</span></p>
 <p class="NoIndent">Who hasn’t always wanted to soar the pretty blue sky? In an attempt to grant the wishes of land-bound folk, these great magical wings were created. Known by many names and crafted by as many mages, they commonly take the shape of the wings of whatever local birds hold affection. Worn by means of a harness or, in some dire cases, a surgical procedure.</p>
 <p>When you take to the air with these magical wings, roll+DEX. ✴On a 10+, your flight is controlled and you may stay aloft as long as you like. ✴On a 7–9, you make it aloft but your flight is short or erratic and unpredictable, your choice. ✴On a 6-, you make it aloft, but the coming-down part and everything between is up to the GM.</p></div>
+
 <div class="Move"><p class="MagicItem">不動權杖 (Immovable Rod)	<span class="Tags">0 重量</span></p>
 <p class="NoIndent">A funny metal rod with a button on it. Press the button and the rod just sticks. It freezes in place—in midair, standing up or lying down. It can’t be moved. Pull it, push it, try as hard as you like, the rod stays. Maybe it can be destroyed, maybe it can’t. Push the button again and it’s free—take it along with you. Might be useful to have such a stubborn thing along. </p></div>
+
 <div class="Move"><p class="MagicItem">Infinite Book	<span class="Tags">1 重量</span></p>
 <p class="NoIndent">This book contains an infinite number of pages in a finite space. With no limit to the pages, everything that ever was, is, or will be is contained somewhere in the book. Luckily the index is great.</p>
 <p>When you spout lore while consulting the book you gain an extra clause: On a 12+, the GM will give a solution to a problem or situation you’re in.</p></div>
