--- a/gm/basics/index.html
+++ b/gm/basics/index.html
@@ -394,40 +394,57 @@
 <p class="NoIndent">
 	一旦角色們已經被告知了某個集團或某種生物類型的存在，你就可以開始使用這些怪物的動作了。</p>
 <p>
-	盡量廣泛地運用集團和生物類型。獸人們可以率領著牠們的座狼展開狩獵。一名瘋狂的邪教徒也許控制著一些不死僕從、或甚至可能召喚出了幾頭來自地獄深淵的狂暴魔獸。這是個你可能經常會下意識使用的動作──這裡只不過是以一種明確而有效的方式來實現這個你為自己準備的工具。</p>
+	盡量廣泛地運用集團和生物類型。獸人們可以率領著牠們的座狼展開狩獵。一名瘋狂的邪教徒也許控制著一些不死僕從、或甚至可能召喚出了幾頭來自地獄深淵的狂暴魔獸。這是個你可能經常會下意識使用的動作──這裡只不過是讓你以一種更明確有效的方式來使用這些你為自己安排好的工具。</p>
 
-<h4>讓他們折返 (Make them backtrack)</h4>
-<p class="NoIndent">Look back at the spaces you’ve added to the map. Is there anything useful there as yet undiscovered? Can you add a new obstacle that can only be overcome by going back there? Is there a locked door here and now whose key lies in an earlier room?</p>
-<p>When backtracking, show the effect that time has had on the areas they’ve left behind. What new threats have sprung up in their wake? What didn’t they take care of that’s waiting for their return?</p>
-<p>Use this move the make the dungeon a living, breathing place. There is no stasis in the wake of the characters’ passing. Add reinforcements, cave in walls, cause chaos. The dungeon evolves in the wake of the characters’ actions.</p>
+<h4>讓他們折返</h4>
+<p class="NoIndent">
+	回頭看看你添加在地圖上的區域，那裡是不是還有些派得上用場的事物尚未被發掘？你能否添加一個只有回到該處才有辦法克服的新障礙？會不會他們面前出現了一道上鎖的大門，而能夠開啟它的鑰匙仍躺臥在他們先前經過的房間？</p>
+<p>
+	當角色們折返時，向他們展現出時間對他們身後區域造成的影響。這裡在他們離開後又出現了什麼樣的新威脅？而他們又是否忽略了什麼正等著他們回歸的事物？</p>
+<p>
+	利用這個動作來讓地城成為一個有生命、時時變化的場所。這裡的時間在角色們離開之後並沒有因此停滯。敵人增加了援軍、牆壁塌陷、造成混亂。地城將隨著角色們的行為而不斷變化發展。</p>
 
-<h4>展示有代價的財富 (Present riches at a price)</h4>
-<p class="NoIndent">What do the players want? What would they sacrifice for it?</p>
-<p>Put some desirable item just out of reach. Find something they’re short on: time, HP, gear, whatever. Find a way to make what they want available if they give up what they have.</p>
-<p>The simplest way to use this move is the promise of gold out of the way of the main objective. Will they stop to pry the ruby eyes from the idol when they know that the sacrifice looms closer and closer? Use this move and you can find out.</p>
+<h4>展示有代價的財富</h4>
+<p class="NoIndent">
+	玩家們想要什麼？他們願意為此付出什麼樣的犧牲？</p>
+<p>
+	把他們渴望的事物放在他們剛好觸手不能及的位置。找出他們缺少的事物：也許是時間、生命值、裝備、等等。讓他們只要放棄他們所擁有的，就有辦法得到他們所想要的。</p>
+<p>
+	使用這個動作最簡單的方式，就是把金錢財富擺放在偏離主要目標的道路上。當他們知道獻祭儀式的期限已經越來越逼近，他們又是否會為了挖鑿神像臉上的紅寶石之眼而停下腳步？使用這個動作，然後你就會知道了。</p>
 
-<h4>對其中一個角色發起挑戰 (Present a challenge to one of the characters)</h4>
-<p class="NoIndent">Challenge a character by looking at what they’re good at. Give the thief a lock to pick, show the cleric servants of an enemy god to battle against. Give the wizard magical mysteries to investigate. Show the fighter some skulls to crack. Give someone a chance to shine.</p>
-<p>As an alternative, challenge a character by looking at what they’re bad at or what they’ve left unresolved. If the bard has a complicated lie on his conscience, what steps will he take to cover it up when someone figures him out? If the wizard has been summoning demons, what happens when word gets out?</p>
-<p>This move can give a character the spotlight—even if just for a moment. Try to give everyone a chance to be the focus of play using this move from session to session.</p>
+<h4>對其中一個角色發起挑戰</h4>
+<p class="NoIndent">
+	你可以透過提供某個角色擅長的事情來對他們發起挑戰。比如說，給盜賊一道門鎖去解開、讓牧師與一名敵對神祇的僕從交戰、拋出魔法謎團給法師去調查、或是把一堆能放手砸爛的頭骨放到戰士面前。給他們一個綻放光彩的機會。</p>
+<p>
+	或者，你也可以選擇狙擊他們不擅長的事情、或揪出他們留下的未解難題。如果吟遊詩人心中仍藏著一個苛責良心的複雜謊言，那麼當有人發現這件事時，他會採取什麼舉動來掩蓋它？如果法師曾經召喚過惡魔，那當這個消息不幸走漏，又將發生什麼事情呢？</p>
+<p>
+	這個動作能讓其中一個角色得到搶佔聚光燈的機會──那怕只是一瞬間。試著在每次聚會使用這個動作，讓每個人都有機會成為遊戲中的焦點。</p>
 
 <hr/>
 <h2>常見情況的處理</h2>
 <p class="NoIndent">在地城世界中總會出現一些常見的情況。這裡將說明這些情況的處理方法。</p>
 
 <h4>戰鬥</h4>
-<p class="NoIndent">Sooner or later blades are drawn and blood is shed. When this happens the players are likely to start hacking and slashing, volleying, and defending. Think about more than just the exchange of damage. Monsters might be trying to capture the characters or protect something from them. Understand what the fight is about; what each side wants and how that might affect the tide of battle.</p>
-<p>No self-respecting monster just stands still for their beating. Combat is a dynamic thing with creatures moving in and out of range, taking cover, and retreating. Sometimes the battlefield itself shifts. Have your monsters take action that the players will react to. Make sure you’re making use of moves beyond deal damage, even in a fight.</p>
-<p>Make sure everyone has a chance to act, and that you know where each player is during the chaos of combat. Make a map of a complex battle location so that everyone knows just what’s happening and can describe their actions appropriately.</p>
+<p class="NoIndent">
+	刀刃出鞘，鮮血四濺，這事遲早都會發生。當發生戰鬥時，玩家們很可能會開始頻繁使用<b>砍劈</b>、<b>射擊</b>、和<b>保衛</b>動作。不要只顧著彼此交換傷害，除了攻擊之外，怪物們也可能會嘗試捕捉角色、或保護某些東西。想清楚這場戰鬥的意義；雙方想要的是什麼，而這又會如何影響戰鬥的走向。</p>
+<p>
+	沒有任何有自尊心的怪物會在被攻擊時而仍站在原地不動。戰鬥是一場瞬息萬變的動態情境，生物們時不時鑽進或踏出彼此的攻擊範圍、找尋掩護、並向後撤退。有時候甚至戰場本身也會產生變化。讓你的怪物們採取行動，並讓玩家們做出反應。即使是在戰鬥中，也要確保你會進行除了<u>造成傷害</u>以外的其他動作。</p>
+<p>
+	確保每個人都有行動的機會，同時掌握每個玩家在這場混亂戰鬥中的位置。你可以為複雜的戰鬥場地特別繪製一張地圖，好讓所有人都清楚發生了什麼事，並能適當地描述他們的行動。</p>
 
 <h4>陷阱</h4>
-<p class="NoIndent">Traps may come from your prep, or you can improvise them based on your moves. If nothing has established that the location is safe, traps are always an option.</p>
-<p>The players may find traps through clever plans, trap sense, or discerning realities. If a character describes an action that doesn’t trigger a move, but the action would still discover a trap, don’t hide it from them. Traps aren’t allowed to break the rules.</p>
+<p class="NoIndent">
+	陷阱可能來自你的事前準備、或你可以根據你的動作即興創造它們。若沒有任何證據表明這個區域是安全的，那麼陷阱永遠會是其中一個選項。</p>
+<p>
+	玩家們可能會透過巧妙的計畫、陷阱感知能力、或<b>審視現狀</b>動作來發現陷阱。若某個角色採取了一個不會觸發任何動作，但確實能夠找出陷阱的行動時，不要多加隱瞞，直接讓他們把陷阱揪出來吧。畢竟，陷阱可沒有能打破規則的特權。</p>
 
 <h4>人際</h4>
-<p class="NoIndent">Dwarven smiths, elven sages, humans of all shapes and sizes occupy the world around the characters. They’re not mindless stooges to be pushed around but they’re not what we’re playing to find out about either. The NPCs are people: they have goals and the tools to struggle towards those goals. Use them to illustrate what the world is like. Show your players the common people struggling for recognition or the noble classes seeking to uplift their people. Some whole adventures might take place in a peopled environment rather than an isolated dungeon. Some classes, the bard in particular, are adept at manipulating and using people as resources. Don’t shy away from these situations. Be a fan of these characters, giving them interesting, nuanced people to interact with.</p>  
-<p>People, just like dungeons, change over time. The passing of the characters through their lives might inspire or enrage them. The characters’ actions will cause the world to change, for good or ill, and the people they meet with will remember these changes. When the characters roll back through a town they were less-than-kind to on their previous visit, show them how the people are different now. Are they more cautious? Have they taken up a new religion? Are they hungry for revenge?</p>
-<p>Relationships between characters are represented by the bonds but relationships with NPCs are more tenuous. If the players want to make real, lasting connections with the people of the world, they need to act. Remember, “what do you do?” is as valid a question when faced with the hopes and fears of a potential new ally or enemy as it is when staring down the business end of a longsword.</p>
+<p class="NoIndent">
+	矮人鐵匠、精靈學者、各形各色的人類佔據著這個角色們所身處的世界。他們既不是沒有心智能力、任憑擺佈的傀儡，但也不是我們玩這個遊戲的主要目的。NPC也是人：他們有著自己的目標理想、也擁有為了實現這個目標而預備的工具和手段。利用他們來描繪這個世界的樣貌。向你的玩家們展現出那些為獲得認可而努力奮鬥的平民、以及那些期望領導百姓的貴族階級。有時候，整個冒險故事都會發生在人來人往的社會環境中，而不是孤僻偏遠的地下城內。有些職業，特別是吟遊詩人，也尤其擅長操縱並利用人群。不要迴避這些情況。成為這些角色的粉絲，讓他們有機會與這些有趣而多樣的人們相處互動。</p>  
+<p>
+	人們，就如同地城一樣，會隨著時間改變。這些來到他們生命中的冒險者們可能會激勵他們、也可能惹怒他們。無論是好是壞，角色們的行動都會導致這個世界的變化，而他們所遭遇的這些人們也會記住這些改變。當角色們回到一個在他們上次造訪時表現的不怎麼友善的小鎮時，向他們展示這些居民們現在有什麼樣的改變。他們是否變得更加謹慎？也許他們改信了一個新的宗教？還是他們渴望對這些不知好歹的冒險者展開復仇？</p>
+<p>
+	玩家角色之間的關係是透過羈絆來呈現，而角色與NPC之間的關係則更纖細得多。若玩家們想要與這個世界的人們建立真實長久的關係，那他們就必須採取行動。記住，就如同角色們在戰場中狠狠盯著長劍對面的敵人一樣，「你打算做什麼？」這個問句在他們面對潛在盟友或敵人的希望和恐懼時也同樣有效。</p>
 
           </div>
        </div>
