--- a/gm/fronts/index.html
+++ b/gm/fronts/index.html
@@ -281,7 +281,9 @@
 <p>When running two adventure fronts at the same time they can be intertwined or independent. The anarchists corrupting the city from the inside are a different front from the orcs massing outside the walls, but they’d both be in play at once. On the other hand one dungeon could have multiple fronts at play within its walls: the powers and effects of the cursed place itself and the warring humanoid tribes that inhabit it.</p>
 <p>A situation warrants multiple adventure fronts when there are multiple impending dooms, all equally potent but not necessarily related. The impending doom of the anarchists is chaos in the city, the impending doom of the orcs is its utter ruination. They are two separate fronts with their own dangers. They’ll deal with each other, as well, so there’s some room for the players choosing sides or attempting to turn the dangers of one front against the other.</p>
 <p>When dealing with multiple adventure fronts the players are likely to prioritize. The cult needs attention now, the orcs can wait, or vice versa. These decisions lead to the slow advancement of the neglected front, eventually causing more problems for the characters and leading to new adventures. This can get complex once you’ve got three or four fronts in play. Take care not to get overwhelmed.</p>
-<h1>An Example Front: The Opening of the White Gate</h1>
+
+<hr/>
+<h1>範例前置: The Opening of the White Gate</h1>
 <h2>Dangers</h2>
 <h3>The College of Arcanists (Cabal)</h3>
 <p class="NoIndent"><strong>Impulse:</strong> to absorb those in power, to grow</p>
