--- a/gm/first_session/index.html
+++ b/gm/first_session/index.html
@@ -2,7 +2,7 @@
 <!DOCTYPE html>
 <html lang="tw">
   <head>
-  <title>First Session | 地城世界 HTML SRD</title>
+  <title>第一次聚會 | 地城世界 HTML SRD</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     
     <link href="https://hazmole.github.io/Dungeon-World-HTML-SRD-release/bootstrap/css/bootstrap.min.css" rel="stylesheet">
@@ -110,11 +110,12 @@
        <div class="row">
           <div class="col-md-8 col-md-offset-1">
              
-
-<h1>First Session</h1>
+<h1>第一次聚會</h1>
 <p class="NoIndent">The first session of a game of Dungeon World begins with character creation. Character creation is also world creation, the details on the character sheets and the questions that you ask establish what Dungeon World is like—who lives in it and what’s going on.</p>
 <p>This section is for the GM so it’s addressed to you—the GM. For the players, the first session is just like every other. They just have to play their characters like real people and explore Dungeon World. You have to do a little more in the first session. You establish the world and the threats the players will face.</p>
-<h2>Prep</h2>
+<hr/>
+
+<h2>事前準備 (Prep)</h2>
 <p class="NoIndent">Before the first session, you’ll need to print some stuff. Print off:</p>
 <ul><li>A few copies of the basic moves</li>
 <li>One copy of each class sheet, double-sided</li>
@@ -170,7 +171,9 @@
 <p class="NoIndent">As a fan of the heroes (remember your agenda?) you want to see them do what they do best. Give them a chance at this, not by tailoring every room to their skills, but by portraying a fantastic world (agenda again) where there are many solutions to every challenge.</p>
 <h4>Introduce NPCs</h4>
 <p class="NoIndent">NPCs bring the world to life. If every monster does nothing more than attack and every blacksmith sets out their wares for simple payment the world is dead. Instead give your characters, especially those that the players show an interest in, life (principles, remember?). Introduce NPCs but don’t protect them. The recently deceased Lord of Goblins is just as useful for future adventures as the one who’s still alive.</p>
-<h2>After the First Session</h2>
+
+<hr/>
+<h2>第一次聚會之後</h2>
 <p class="NoIndent">Once you’re done with the first session take some time to relax. Let ideas ferment. Don’t rush into the next session.</p>
 <p>Once you’ve had some time to relax and think over the first session it’s time to prepare for the next session. Preparing for the second session takes a few minutes, maybe an hour if this is your first time. You’ll create fronts, maybe make some monsters or custom moves, and generally get an idea of what is going on in the world.</p>
 
